--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   "devDependencies": {
     "@types/node": "22.2.0",
     "@types/react": "^18.3.3",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^5.5.4",
-    "vite": "^2.9.0"
+    "typescript": "^5.5.4"
   }
 }
